// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should credit a photo 1`] = `
<section
  className="post preview"
>
  <div
    className="post number ribbon"
  >
    <div
      className="backdrop"
    >
      <div
        className="text"
      >
        #
        2
      </div>
    </div>
  </div>
  <div
    className="thumbnail"
  >
     
    <a
      className="slug"
      href="/dont-panic"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "NaN%",
              "width": "100%",
            }
          }
        />
        <picture>
          <source />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </a>
     
     
    <a
      className="badge linked"
      title="Download free do whatever you want high-resolution photos from Ilya Pavlov"
    >
      <span
        className="source-logo"
      >
        <img
          alt="unsplash"
          src="/unsplash.svg"
        />
      </span>
      <span
        className="attribute"
      >
        Ilya Pavlov
      </span>
    </a>
     
  </div>
  <h2>
     
    <a
      href="/dont-panic"
      title="Don't panic."
    >
      Don't panic.
    </a>
     
  </h2>
  <div
    className="blurb"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Earthman...",
        }
      }
    />
  </div>
  <div
    className="metadata"
  >
    <div
      className="metadata"
    >
      posted on
       
      <time
        dateTime={"2019-02-01T00:00:00.000Z"}
      >
        Friday, 1 February 2019
      </time>
       
      <span>
        by Clarice Bouwer
      </span>
       
      <span>
        (Est. 42 minute read)
      </span>
    </div>
  </div>
  <div
    className="tags"
  >
     
    <a
      className="tag"
      href="/tag/dont/"
      title="don't"
    >
      don't
    </a>
     
     
    <a
      className="tag"
      href="/tag/panic/"
      title="panic"
    >
      panic
    </a>
     
  </div>
</section>
`;

exports[`should limit the blurb word count 1`] = `
<section
  className="post preview"
>
  <div
    className="post number ribbon"
  >
    <div
      className="backdrop"
    >
      <div
        className="text"
      >
        #
        2
      </div>
    </div>
  </div>
  <div
    className="thumbnail"
  >
     
    <a
      className="slug"
      href="/dont-panic"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "NaN%",
              "width": "100%",
            }
          }
        />
        <picture>
          <source />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </a>
     
     
    <a
      className="badge linked"
      title="Download free do whatever you want high-resolution photos from Ilya Pavlov"
    >
      <span
        className="source-logo"
      >
        <img
          alt="unsplash"
          src="/unsplash.svg"
        />
      </span>
      <span
        className="attribute"
      >
        Ilya Pavlov
      </span>
    </a>
     
  </div>
  <h2>
     
    <a
      href="/dont-panic"
      title="Don't panic."
    >
      Don't panic.
    </a>
     
  </h2>
  <div
    className="blurb"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Earthman Arthur Dent is rescued by his friend, Ford Prefect—an alien researcher for the titular Hitchhiker's Guide to the Galaxy, an enormous work providing information about every planet in the universe—from the Earth just before it is destroyed by the alien Vogons.",
        }
      }
    />
  </div>
  <div
    className="metadata"
  >
    <div
      className="metadata"
    >
      posted on
       
      <time
        dateTime={"2019-02-01T00:00:00.000Z"}
      >
        Friday, 1 February 2019
      </time>
       
      <span>
        by Clarice Bouwer
      </span>
       
      <span>
        (Est. 42 minute read)
      </span>
    </div>
  </div>
  <div
    className="tags"
  >
     
    <a
      className="tag"
      href="/tag/dont/"
      title="don't"
    >
      don't
    </a>
     
     
    <a
      className="tag"
      href="/tag/panic/"
      title="panic"
    >
      panic
    </a>
     
  </div>
</section>
`;

exports[`should render the full blurb 1`] = `
<section
  className="post preview"
>
  <div
    className="post number ribbon"
  >
    <div
      className="backdrop"
    >
      <div
        className="text"
      >
        #
        2
      </div>
    </div>
  </div>
  <div
    className="thumbnail"
  >
     
    <a
      className="slug"
      href="/dont-panic"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <div
          aria-hidden={true}
          style={
            Object {
              "paddingBottom": "NaN%",
              "width": "100%",
            }
          }
        />
        <picture>
          <source />
          <img
            alt=""
            loading="lazy"
            onLoad={[Function]}
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"undefined\\" /><img loading=\\"lazy\\" src=\\"\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </a>
     
     
    <a
      className="badge linked"
      title="Download free do whatever you want high-resolution photos from Ilya Pavlov"
    >
      <span
        className="source-logo"
      >
        <img
          alt="unsplash"
          src="/unsplash.svg"
        />
      </span>
      <span
        className="attribute"
      >
        Ilya Pavlov
      </span>
    </a>
     
  </div>
  <h2>
     
    <a
      href="/dont-panic"
      title="Don't panic."
    >
      Don't panic.
    </a>
     
  </h2>
  <div
    className="blurb"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Earthman Arthur Dent is rescued by his friend, Ford Prefect—an alien researcher for the titular Hitchhiker's Guide to the Galaxy, an enormous work providing information about every planet in the universe—from the Earth just before it is destroyed by the alien Vogons.",
        }
      }
    />
  </div>
  <div
    className="metadata"
  >
    <div
      className="metadata"
    >
      posted on
       
      <time
        dateTime={"2019-02-01T00:00:00.000Z"}
      >
        Friday, 1 February 2019
      </time>
       
      <span>
        by Clarice Bouwer
      </span>
       
      <span>
        (Est. 42 minute read)
      </span>
    </div>
  </div>
  <div
    className="tags"
  >
     
    <a
      className="tag"
      href="/tag/dont/"
      title="don't"
    >
      don't
    </a>
     
     
    <a
      className="tag"
      href="/tag/panic/"
      title="panic"
    >
      panic
    </a>
     
  </div>
</section>
`;
